<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Prop Editor</string>
    <string name="app_ver">0.1</string>
<string name="copyleft">Copyleft 2010 Evan Widger</string>
<string name="disclaimer">This is highly experimental code, my first Android app, and not guaranteed to do anything right. Use at your own risk. Save a backup before editing and visually inspect any edited files.</string>
<string name="resolve_edit">Prop Editor</string>
<string name="instructions">Open a build.prop type file from your sdcard (must be .prop), tap the existing properties to change the values, or menu->add to add new properties. Merge will change lines in the open file to match those in the file you merge in. </string>
</resources>
