<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TableLayout android:id="@+id/TableLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:stretchColumns="1">
		<TableRow >
			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" android:padding="2dip"/>
			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_ver" android:padding="2dip"/>
			<TextView android:layout_height="wrap_content" android:text="@string/copyleft" android:gravity="right" android:padding="2dip"/>
		</TableRow>
	</TableLayout>
	
	<Button 
		android:layout_width="fill_parent"  
		android:layout_height="wrap_content"  
		android:text="Open *.prop File" android:id="@+id/open"/>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/DisclaimerBox" android:text="@string/disclaimer"></TextView>

<TextView android:text="@string/instructions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/instructions" android:padding="5dip"></TextView>


		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/CopyToCard"/>
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/CopyFromCard"/>

</LinearLayout>
